# zexus-interpreter

./: .gitattributes  .gitignore  .npmignore  ADDITIONAL_FIXES_1.6.7.md  BLOCKCHAIN_MODULE_FULL_SOURCE.md  CHANGELOG.md  COMPLETE_FIXES_DOCUMENTATION.md  CURRENT_ZEXUS.md  DEMO_ALL_FIXES.zx  IMPROVEMENT_PLAN.md  NEXT_STEPS.md  PARSER_SEMICOLON_FIX.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASES.md  PLAN.md  QUICK_START.md  README.md  REGRESSION_ISSUES_TRACKER.md  SECURITY_ACTION_PLAN.md  SECURITY_QUICK_REFERENCE.md  SPEED_RESULTS.md  SSH_PUBLIC_KEY.txt  SYSTEM_ANALYSIS_FINDINGS.md  UNIFIED_SYSTEM_COMPLETE.md  VM_DEEP_DIVE_TRACKING.md  VM_INTEGRATION_SUMMARY.md  VM_KEYWORD_SUPPORT_REPORT.md  VSCODE_IMPLEMENTATION_SUMMARY.md  VULNERABILITIES_FIXES.md  VULNERABILITY_FINDINGS.md  VULNERABILITY_TEST_RESULTS.md  ZEXUS_BLOCKCHAIN_REFERENCE.md  analytics.py  any.zx  bench_compare.py  bench_gas_stress.py  bench_phase3.py  bench_phase6.py  bench_quick.py  bench_vs.py  (+157 more)
.github/workflows/: wheels.yml
.zexus_persist/: test_key2.json  test_key4.json
ENHANCEMENT_PACKAGE/: RESTRICT_SANDBOX_TRAIL_IMPLEMENTATION.md
blockchain_demo/: address_prefix.zx  dex.zx  dex.zxc  governance.zx  governance.zxc  main.zx  multichain_bridge.zx  nft.zx  nft.zxc  staking.zx  staking.zxc  test_import_closure.zx  test_module.zx  test_pause.zx  test_utils_import.zx  test_utils_import2.zx  token.zx  token.zxc  utils.zx  utils.zxc  wallet.zx  wallet.zxc
blockchain_test/: PARSER_FIX_DATA_DECLARATIONS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FINAL_REPORT.md  SECURITY_IMPLEMENTATION_REPORT.md  SECURITY_VULNERABILITY_REPORT.md  SESSION_PROGRESS_REPORT.md  TEST_RESULTS.md  VM_ARCHITECTURE_CORRECT.md  VM_INTEGRATION_REPORT.md  bridge.zx  bridge_secure.zx  perf_1000.zx  perf_10000_current.zx  perf_10k.zx  perf_10k_v2.zx  perf_10k_v3.zx  perf_500.zx  perf_clean.txt  perf_full_network_100.zx  perf_full_network_10k.zx  perf_quick_100.zx  performance_results.txt  performance_results_simple.txt  performance_test.zx  performance_test_simple.zx  quick_perf_test.zx  quick_security_test.zx  run_test.zx  security_test.zx  security_test_complete.zx  security_test_secure.zx  stress_test_comprehensive.zx  stress_test_simplified.zx  test_jit.zx  test_jit_simple.zx  test_token_actions.zx  token.zx  token_secure.zx  token_silent.zx  ultimate_stress_test.zx  (+6 more)
blockchain_test/full_network_chain/: full_network_blockchain.zx  tmp_account_init.zx  tmp_assign_test.zx  tmp_min.zx  tmp_pass_contract.zx  tmp_simple.zx  tmp_store_contract.zx
blockchain_test/security_tests/: blockchain_exploit_probe.zx
blockchain_test/security_tests_working/: test_dos_working.zx  test_overflow_working.zx  test_reentrancy_working.zx
blockchain_test/zexus_blockchain/: README.md  blockchain.zx  blockchain_complete.zx  run_blockchain.zx
chain_data/: SimpleToken_68a366ab.sqlite
doc/: summary  summary.new
docs/: ASYNC_AWAIT_IMPLEMENTATION.md  BLOCKCHAIN_FEATURES.md  BLOCKCHAIN_KEYWORDS.md  CONTRACT_REFERENCES.md  DOCUMENTATION_INDEX.md  ECOSYSTEM_STRATEGY.md  EDGE_CASE_TESTING_REPORT.md  INDEX.md  ISSUES.md  KEYWORD_TESTING_MASTER_LIST.md  MODULE_SYSTEM.md  PYPI_TRUSTED_PUBLISHING.md  STATUS.md  keyword_strategy_find_load.md
docs/keywords/: ADVANCED_FEATURES.md  CONST.md  LET.md  (+13 more)
issues/: ISSUE3.md  ISSUE4.md  ISSUE5.md  ISSUE6.md  ISSUE7.md  ISSUE8.md
renderer/: painter.py
rust_core/: Cargo.toml  README.md  pyproject.toml
rust_core/src/: binary_bytecode.rs  contract_vm.rs  executor.rs  hasher.rs  lib.rs  merkle.rs  rust_vm.rs  signature.rs  state_adapter.rs  validator.rs
scripts/: main.py  postinstall.js  profile_full_network_components.py  test_results.txt
src/: __init__.py
test_backend_project/: config.zx  main.zx
test_import_issue/: main.zx  model.zx
tests/: conftest.py  extreme_features_test.zx  extreme_security_test.zx  extreme_speed_test.zx  extreme_stability_test.zx  extreme_vm_test.zx  test_advanced.zx  test_complete.zx  test_complete_server.zx  test_fix.zx  test_full_integration.py  test_grand_finale.zx  test_integration.py  test_issue8_advanced.zx  test_issue8_fixes.zx  test_lambda_and_chains_pytest.py  test_memory_safety.py  test_module_system.py  test_simple_final.zx  test_unified_vm.zx
vscode-extension/: README.md  package.json
zexus_interpreter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+289 files in other folders)
