[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "zexus"
version = "1.8.3"
description = "A modern, security-first programming language with blockchain support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Zaidux", email = "zaiduabubakar777@gmail.com"}
]
maintainers = [
    {name = "Zaidux", email = "zaiduabubakar888@gmail.com"}
]
keywords = [
    "programming-language",
    "interpreter",
    "compiler",
    "blockchain",
    "smart-contracts",
    "security",
    "policy-as-code",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
    "rich>=10.0",
    "pygls>=1.0.0",
    "pygments>=2.0",
]

[project.scripts]
zx = "zexus.cli.main:cli"
zexus = "zexus.cli.main:cli"
zpm = "zexus.cli.zpm:cli"
zx-run = "zexus.cli.main:cli"
zx-dev = "zexus.cli.main:cli"
zx-deploy = "zexus.cli.main:cli"
zpics = "zexus.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]
blockchain = [
    "web3>=5.0",
    "eth-account>=0.5",
]
jit = [
    "llvmlite>=0.41.0",
    "Cython>=0.29",
]

# Optional runtime features
lsp = [
    "pygls>=1.0.0",
]
network = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
]
security = [
    "bcrypt>=4.0",
    "psutil>=5.9",
]

# Tooling to build the Rust VM extension from source (best-effort)
rust = [
    "maturin>=1.5",
]

# Convenience: install everything needed for the most complete experience.
# Note: some optional deps may require system tooling (e.g., Rust for the VM).
full = [
    "web3>=5.0",
    "eth-account>=0.5",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "bcrypt>=4.0",
    "psutil>=5.9",
    "maturin>=1.5",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zexus = ["py.typed", "*.pyi"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
